k8s/minikube/09-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance-app-service
  namespace: finance-tracker
spec:
  selector:
    app: finance-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
