k8s/minikube/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-app-ingress
  namespace: finance-tracker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: finance-tracker.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finance-app-service
            port:
              number: 80
